--- a/atividades/Atividades_UC9/EncontrosRemotos/index.html
+++ b/atividades/Atividades_UC9/EncontrosRemotos/index.html
@@ -15,7 +15,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+  <script src="https://kit.fontawesome.com/13c3cfefb1.js" crossorigin="anonymous"></script>
+ 
 </head>
 
 
@@ -35,7 +36,22 @@
       <a href="#" id="barras">
         <img class="barras" src="img/bars.svg" alt="">
       </a>
-      <nav id="menu" class="menu">
+      <div id="menu-icones">
+        <a href="login.html"><i class="fa-solid fa-user"></i></a>
+      </div>
+ 
+      <!-- <nav id="menu" class="menu">
+        <a href="">Home</a>
+        <a href="">Computadores</a>
+        <a href="">Promoções</a>
+        <a href="">Games</a>
+        <a href="">Forum</a>
+        <a href="">Contato</a>
+      </nav>
+      <div id="menu-icones"><i class="fa-solid fa-user"></i></div> -->
+    </div>
+    <div class="container">
+       <nav id="menu" class="menu">
         <a href="">Home</a>
         <a href="">Computadores</a>
         <a href="">Promoções</a>
@@ -44,6 +60,7 @@
         <a href="">Contato</a>
       </nav>
     </div>
+
   </header>
  
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
